--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="refresh" content="0; url=collapsible-menu/index.html">
+  <head>
+    <meta http-equiv="refresh" content="0; url=collapsible-menu/index.html" />
     <title>Redirecting...</title>
-</head>
-<body>
-    <p>If you are not redirected automatically, follow this <a href="collapsible-menu/index.html">link to the main page</a>.</p>
-</body>
+  </head>
+  <body>
+    <p>
+      If you are not redirected automatically, follow this
+      <a href="collapsible-menu/Index.html">link to the main page</a>.
+    </p>
+  </body>
 </html>
