--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p>
-      <a href="collapsible-menu/index.html">link to the main page</a>.
+      <a href="collapsible-menu/Index.html">link to the main page</a>.
     </p>
   </body>
 </html>
